Formulario para registro de incidentes

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,5 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "nodemailer": "^6.9.14"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
